# agent-sweet

./: .databricksignore  .gitignore  CLAUDE.md  CONTRIB.md  README.md  app.yaml  databricks.yml  deploy.sh  mlflow.db  pyproject.toml  requirements-serving.txt  requirements.txt
.claude/skills/: integration-testing.md
.githooks/: pre-commit
.github/: pull_request_template.md
.github/workflows/: build-static.yml  ci.yml
backend/: ai_chat.py  app_resources.py  auth.py  capabilities.py  deploy_notebook.py  discovery.py  eval.py  graph_builder.py  lakebase.py  main.py  mlflow_model.py  requirements-serving.txt  schema.py  setup.py  tools.py
backend/nodes/: __init__.py  base.py  genie_node.py  human_input_node.py  llm_node.py  mcp_node.py  router_node.py  uc_function_node.py  vector_search_node.py
backend/static/: index.html
backend/static/assets/: index-3jjkk6Sl.js  index-4NwgsIyd.js  index-62cvfsBp.js  index-9ZUaViU4.js  index-B1iAp2tF.js  index-B5nO8S_z.css  index-B7jGgNrk.css  index-BGGuOVFf.css  index-BMr_lJQe.css  index-BOEIOq9w.js  index-BP_TRSEC.js  index-BZEDKovG.css  index-Bejb9UOS.css  index-Bi8zkq5N.js  index-BjS541Zz.js  index-Bs5G8FVf.js  index-BsFpGFRU.css  index-Bt6qKOtH.css  index-C1O0i-As.js  index-C7xEP1B1.css  index-C8ZCVQzA.js  index-C9q4hkKh.js  index-CGDUlmj1.js  index-CK0O2VA2.js  index-CO_5ac24.js  index-CQI-qldv.css  index-CWnbjdPB.js  index-CYIKC1qz.js  index-CYOWnJTp.js  index-CZlqw0Wh.css  index-C_98Qu9G.css  index-C_g8iCxG.js  index-CbhgHAoi.css  index-CcwflLK6.js  index-CdZOHeOW.js  index-Cdlwlc2J.js  index-Csu2kpRT.css  index-Cvw5M6zj.js  index-CwGLCSh0.css  index-CwfLbc-W.js  (+34 more)
backend/tests/: conftest.py  test_api.py  test_auth.py  test_graph_builder.py  test_llm_helpers.py  test_mcp_persistence.py  test_tools_helpers.py
backend/tests/integration/: conftest.py  test_llm_node.py  test_preview.py
demo/: README.md  setup_demo.py
examples/: email_draft_agent.json  joke_rewriter_agent.json  medical_assistant_agent.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  StateContext.tsx  api.ts  derivedState.ts  types.ts
frontend/src/components/: AIChatDropdown.tsx  BuilderWalkthrough.tsx  Canvas.tsx  ChatPlayground.tsx  ConfigPanel.tsx  DeployModal.tsx  EvalModal.tsx  HomePage.tsx  InlineFieldCreator.tsx  LocalInput.tsx  ModelsPage.tsx  NodeIcon.tsx  NodePalette.tsx  ProviderIcon.tsx  RouteEditor.tsx  SchemaEditor.tsx  SearchableSelect.tsx  SetupPage.tsx  SetupPromptModal.tsx  SimpleMarkdown.tsx  StateModelModal.tsx  StatePanel.tsx  StateSummary.tsx  StateVariablesEditor.tsx  TemplatedTextarea.tsx  ToolConfigPanel.tsx
frontend/src/components/nodes/: AgentNode.tsx  NodeSummary.tsx  OutputSchemaList.tsx  ResourcePill.tsx  SentinelNode.tsx  ToolChip.tsx  useDiscoveryLabel.ts
