[project]
name = "agent-builder-app"
version = "0.1.0"
description = "Visual drag-and-drop LangGraph agent builder for Databricks"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "databricks-sdk>=0.20.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "mlflow[databricks]>=3.10.1",
    "databricks-langchain>=0.17.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary]>=3.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
