[project]
name = "agent-builder-app"
version = "0.1.0"
description = "Visual drag-and-drop LangGraph agent builder for Databricks"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "databricks-sdk>=0.20.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "mlflow[databricks]>=3.10.1",
    "databricks-langchain[memory]>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
markers = ["integration: requires a live Databricks workspace"]
filterwarnings = ["ignore::pydantic.warnings.PydanticDeprecatedSince20"]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "databricks-proxy"
url = "https://pypi-proxy.dev.databricks.com/simple/"
default = true
