[project]
name = "agent-sweet"
version = "0.1.0"
description = "AgentSweet — visual drag-and-drop LangGraph agent builder for Databricks"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "langgraph>=1.0.8",
    "langchain-core>=1.2.11",
    "langchain-community>=0.3.0",
    "databricks-sdk>=0.20.0",
    "pydantic>=2.0.0",
    "mlflow[databricks]>=3.1.3",
    "databricks-agents>=1.1.0",
    "databricks-langchain[memory]>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
markers = ["integration: requires a live Databricks workspace"]
filterwarnings = ["ignore::pydantic.warnings.PydanticDeprecatedSince20"]

[[tool.uv.index]]
name = "databricks-proxy"
url = "https://pypi-proxy.dev.databricks.com/simple/"
default = true

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

